# kppp

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  KPPPIface.h  Kppp.desktop  Makefile.am  Messages.sh  README.ModemDB  TODO  accounting.cpp  accounting.h  accounts.cpp  accounts.h  acctselect.cpp  acctselect.h  auth.h  config-kppp.h.cmake  configure.in.in  connect.cpp  connect.h  convlog.tcl  conwindow.cpp  conwindow.h  debug.cpp  debug.h  devices.h  docking.cpp  docking.h  edit.cpp  edit.h  general.cpp  general.h  groupbox.cpp  groupbox.h  iplined.cpp  iplined.h  kppp-config.h.cmake  kppp.lsm  kpppadaptor.cpp  (+53 more)
DB/: CMakeLists.txt  Makefile.am
DB/Modem/: modemDB.rc
DB/Provider/: CMakeLists.txt  Makefile.am
Rules/: CMakeLists.txt  Makefile.am  TEMPLATE
Rules/Argentina/: Argentina_0610.rst  Argentina_Local.rst  CMakeLists.txt  Makefile.am
Rules/Australia/: CMakeLists.txt  Local.rst  Makefile.am  Optus_Residential.rst  STD_Zone_1_-_25-50_kms.rst  STD_Zone_2_-_50-85_kms.rst  STD_Zone_3_-_85-165_kms.rst  STD_Zone_4_-_165+_kms.rst
Rules/Austria/: CMakeLists.txt  Makefile.am
Rules/Bangladesh/: ATT00007.rst  ATT00010.rst  CMakeLists.txt  Makefile.am
Rules/Belgium/: Belgium_internet_euro.rst  Belgium_internet_frank.rst  CMakeLists.txt  Makefile.am
Rules/Bosnia_and_Herzegovina/: BiHnet_-_home_-_bez_impulsa.rst  BiHnet_-_student_-_bez_impulsa.rst  CMakeLists.txt  Makefile.am  SmartNet_PERSONAL_bez_impulsa.rst  samo_impulsi.rst
Rules/Brasil/: Brasil.rst  Brasil_Ligbr.rst  CMakeLists.txt  Makefile.am  Rio_de_Janeiro.rst  SaoPaulo.rst
Rules/Croatia/: CARNet.rst  CMakeLists.txt  Makefile.am  iskon_optimal.rst
Rules/Czechia/: CMakeLists.txt  Czech_Telecom_City.rst  Czech_Telecom_Internet.rst  Czech_Telecom_Internet2000.rst  Czech_Telecom_Internet_2002_Home_Standard.rst  Czech_Telecom_Internet_2004_Business_Internet.rst  Czech_Telecom_Internet_2004_Home_Internet.rst  Czech_Telecom_Internet_2004_telefon_a_Internet_180_+_660.rst  Czech_Telecom_Internet_2004_telefon_a_Internet_90_+_300.rst  Czech_Telecom_Internet_2004_telefon_universal.rst  Makefile.am  Tarif_INTERNET_2002_INTERNET_MAXI_PLUS.rst  Tarif_INTERNET_2002_MINI.rst  Tarif_INTERNET_2002_STANDARD_MAXI.rst
Rules/Denmark/: 12Move_Analog.rst  12Move_ISDN.rst  CMakeLists.txt  Cybercity_Friabonnement.rst  Get2net_Betaling.rst  Get2net_Gratis.rst  Makefile.am  Mobilix_Wanadoo.rst  Teledanmark_Basis.rst  Teledanmark_Favoritinternet.rst  Worldonline-Analog.rst  Worldonline-ISDN.rst
Rules/England/: Connaught_Telecom.rst  Makefile.am
Rules/Estonia/: CMakeLists.txt  Eesti_Telefon.rst  Makefile.am
Rules/Finland/: CMakeLists.txt  Makefile.am  VLP.rst  Vaasan_LP.rst
Rules/France/: CMakeLists.txt  Cegetel_Local.rst  Cegetel_National.rst  France_Telecom_Internet.rst  France_Telecom_Local.rst  France_Telecom_Local_Area.rst  France_Telecom_Local_Primaliste_Internet.rst  France_Telecom_National.rst  Le_9_Local.rst  Le_9_National.rst  Local.rst  Makefile.am  OneTel.rst  Primaliste.rst  Tele2_Local.rst  Tele2_National.rst  Wanadoo_Free.rst
Rules/Germany/: 1und1_InternetZugang.rst  2.5min.rst  2.5s.rst  AddCom_by_Call.rst  Addcom.rst  Arcor_Internet_by_Call.rst  Arcor_Internet_by_Call_easy.rst  CMakeLists.txt  CallOkaynet.rst  Callino_Surf_Basic.rst  Callino_Surf_Plus.rst  Callisa_City.rst  City_Activ_Plus_Option.rst  Cityweb.rst  CompuservePro.rst  E-Plus-Online_Jedermann.rst  Easynet_easy-call.rst  Freenet_Enterprise.rst  Freenet_Sorglos.rst  Freenet_StandardTarif.rst  Freenet_Super_CbC.rst  Freenet_special_call_by_call.rst  MSN.rst  Makefile.am  Mobilcom_Freenet.rst  NGI_Call_By_Call.rst  Netcom_Kassel.rst  Nikoma.rst  Nikoma_Internet_by_Call.rst  Nikoma_Study_and_Surf.rst  Planet-Interkom_Internet_by_call.rst  Puretec.rst  Telekom_City.rst  Telekom_City_Select_5_30.rst  Telekom_T-Online.rst  VR-Web.rst  expressnet.rst  knUUt-by-Call.rst  talkline_by_call.rst  vossnet_fun.rst  (+2 more)
Rules/Greece/: CMakeLists.txt  EPAK.rst  Hellas_EPAK_Zone1.rst  Hellas_EPAK_Zone1_in_drs.rst  Hellas_EPAK_Zone1_in_euro.rst  Hellas_EPAK_Zone2.rst  Hellas_EPAK_Zone2_in_drs.rst  Hellas_EPAK_Zone2_in_euro.rst  Hellas_EPAK_Zone3.rst  Hellas_EPAK_local.rst  Hellas_EPAK_local_in_drs.rst  Hellas_EPAK_local_in_euro.rst  Hellas_analog_local.rst  Hellas_analog_local_in_drs.rst  Hellas_analog_local_in_euro.rst  Hellas_digital_local.rst  Hellas_digital_local_in_drs.rst  Hellas_digital_local_in_euro.rst  Hellas_local.rst  Makefile.am  digital.rst
Rules/HongKong/: CMakeLists.txt
Rules/Hungary/: CMakeLists.txt  LocalTop_MATAV.rst  Makefile.am  PapaTel.rst
Rules/Iceland/: CMakeLists.txt  Iceland_general.rst
Rules/India/: BSNL_Local.rst  BSNL_Long_101_To_200.rst  BSNL_Medium_51_To_100.rst  CMakeLists.txt  Makefile.am  Vsnl_local.rst
Rules/Indonesia/: CMakeLists.txt
Rules/Ireland/: CMakeLists.txt  Eircom_Internet.rst  Eircom_Local.rst  Eircom_National.rst  Eircom_Special.rst  Makefile.am
Rules/Israel/: Bezeq_Interurban.rst  Bezeq_Local.rst  CMakeLists.txt  Makefile.am
Rules/Italy/: Atlanet.rst  CMakeLists.txt  Cheapnet.rst  Infostrada_Internet_SpZero.rst  Infostrada_Libero1055_Base.rst  Infostrada_Libero1055_SpZero.rst  Infostrada_Libero@Sogno.rst  Infostrada_Libero@Sogno_Prima_del_24.10.2000.rst  Infostrada_Loc_Reg_Naz_SpZero.rst  Infostrada_Locali.rst  Infostrada_Locali_Base.rst  Infostrada_Nazionali.rst  Infostrada_Reg_Naz_Base.rst  Infostrada_Regionali.rst  Infostrada_SpazioZero.rst  (+44 more)
doc/: CMakeLists.txt  Makefile.am  accounting.docbook  callback.docbook  chap.docbook  dialog-setup.docbook  getting-online.docbook  global-settings.docbook  hayes.docbook  index-1.html  index-10.html  index-11.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.cvlog  index.docbook  index.html  index.nif  kppp-faq.docbook  security.docbook  tricks.docbook  ttyS-cua.txt  wizard.docbook
logview/: CMakeLists.txt  Makefile.am  Messages.sh  export.cpp  export.h  kppplogview.desktop  log.cpp  log.h  loginfo.cpp  loginfo.h  main.cpp  main.h  monthly.cpp  monthly.h
pixmaps/: CMakeLists.txt  Makefile.am
(+521 files in other folders)
