SUBDIRS = Argentina \
	Austria \
	Australia \
	Bangladesh \
	Belgium \
	Brasil \
	Croatia \
	Czechia \
	Denmark \
	Estonia \
	Finland \
	France \
	Germany \
	Greece \
	HongKong \
	Hungary \
	Iceland \
	India \
	Indonesia \
	Ireland \
	Israel \
	Italy \
	Jamaica \
	Japan \
	Kazakhstan \
	Luxembourg \
	Macedonia \
	Malaysia \
	Netherlands \
	Norway \
	Poland \
	Portugal \
	Romania \
	Singapore \
	Slovakia \
	SouthAfrika \
	Spain \
	Sweden \
	Switzerland \
	Turkey \
	United_Kingdom \
	Uruguay \
	Yugoslavia

#	Estonia 

pkg_DATA = TEMPLATE 
pkg_SCRIPTS = checkrules

pkgdir = $(kde_datadir)/kppp/Rules

EXTRA_DIST = $(pkg_DATA)

