
# add here all files
data_DATA =	Terminal.xpm folder.xpm kppplogo.xpm modemboth.xpm \
		modemleft.xpm modemnone.xpm modemright.xpm phone.xpm \
		terminal_both.xpm terminal_left.xpm \
		terminal_right.xpm dock_none.xpm dock_left.xpm \
		dock_right.xpm dock_both.xpm

datadir = $(kde_datadir)/kppp/pics

EXTRA_DIST = $(data_DATA)
