kde4_header()

add_subdirectory( Austria ) 
add_subdirectory( Denmark ) 
add_subdirectory( Germany ) 
add_subdirectory( Netherlands ) 
add_subdirectory( New_Zealand ) 
add_subdirectory( Norway ) 
add_subdirectory( Portugal ) 
add_subdirectory( United_Kingdom ) 
add_subdirectory( Taiwan ) 
add_subdirectory( Slovenia ) 
add_subdirectory( Sweden ) 
add_subdirectory( Czech_Republic ) 
add_subdirectory( Yugoslavia ) 
add_subdirectory( Ukraine ) 
add_subdirectory( Switzerland ) 
add_subdirectory( Belarus ) 
add_subdirectory( France ) 
add_subdirectory( Ireland ) 




########### install files ###############


kde4_footer()



#original Makefile.am contents follow:

#SUBDIRS = Austria Denmark Germany Netherlands New_Zealand Norway Portugal \
#	  United_Kingdom Taiwan Slovenia Sweden Czech_Republic Yugoslavia Ukraine \
#	Switzerland Belarus France Ireland
