



########### install files ###############

install( FILES Argentina_Local.rst Argentina_0610.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Argentina)




#original Makefile.am contents follow:

#pkg_DATA = Argentina_Local.rst Argentina_0610.rst
#
#pkgdir = $(kde_datadir)/kppp/Rules/Argentina
#
#EXTRA_DIST = $(pkg_DATA)
#
#
#
