kde4_header()

add_subdirectory( Business_1 ) 
add_subdirectory( Business_2 ) 
add_subdirectory( Minimum ) 
add_subdirectory( Standard ) 




########### install files ###############


kde4_footer()



#original Makefile.am contents follow:

#SUBDIRS =	Business_1 \
#		Business_2 \
#		Minimum \
#		Standard
#
##		Business_3 
