



########### install files ###############

install( FILES ATT00007.rst  		ATT00010.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Bangladesh)




#original Makefile.am contents follow:

#pkg_DATA = 	ATT00007.rst \
#		ATT00010.rst
#
#pkgdir = $(kde_datadir)/kppp/Rules/Bangladesh
#
#EXTRA_DIST = $(pkg_DATA)
