



########### install files ###############

install( FILES Czech_Telecom_Internet_2004_telefon_a_Internet_180_+_660.rst  	Czech_Telecom_Internet_2004_Business_Internet.rst  	Czech_Telecom_Internet_2004_telefon_a_Internet_90_+_300.rst  	Czech_Telecom_Internet_2004_Home_Internet.rst  	Czech_Telecom_Internet_2004_telefon_universal.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Czechia)




