pkg_DATA = Czech_Telecom_Internet_2004_telefon_a_Internet_180_+_660.rst \
	Czech_Telecom_Internet_2004_Business_Internet.rst \
	Czech_Telecom_Internet_2004_telefon_a_Internet_90_+_300.rst \
	Czech_Telecom_Internet_2004_Home_Internet.rst \
	Czech_Telecom_Internet_2004_telefon_universal.rst

pkgdir = $(kde_datadir)/kppp/Rules/Czechia

EXTRA_DIST = $(pkg_DATA)
