pkg_DATA = 12Move_Analog.rst 12Move_ISDN.rst \
	Cybercity_Friabonnement.rst \
	Get2net_Betaling.rst Get2net_Gratis.rst \
	Mobilix_Wanadoo.rst \
	Teledanmark_Basis.rst Teledanmark_Favoritinternet.rst \
	Worldonline-Analog.rst Worldonline-ISDN.rst

pkgdir = $(kde_datadir)/kppp/Rules/Denmark

EXTRA_DIST = $(pkg_DATA)
