pkg_DATA =	Telekom_200km.rst \
		Telekom_50km.rst \
		Telekom_City.rst \
		Telekom_City_Weekend.rst \
		Telekom_Ferntarif.rst \
		Telekom_Regio_Call.rst \
		Telekom_T-Online.rst \
		NetCologne_Germany.rst \
		NetCologne_City.rst NetCologne_Time_Line.rst \
		TelePassport_Fern.rst  TelePassport_Nah.rst \
		Tele2.rst \
		Arcor_Internet_by_Call.rst \
		Nikoma.rst \
		Nikoma_Study_and_Surf.rst \
		Nikoma_Internet_by_Call.rst \
		Telekom_City_Select_5_30.rst \
		knUUt-by-Call.rst \
		Addcom.rst \
		talkline_by_call.rst \
		Telekom_T-Online.rst \
		vossnet_fun.rst \
		vossnet_fun_light.rst \
		vossnet_kompl.rst \
		AddCom_by_Call.rst \
		Arcor_Internet_by_Call.rst \
		CallOkaynet.rst \
		City_Activ_Plus_Option.rst \
		Long_Distance_Activ_Plus_Option.rst

pkgdir = $(kde_datadir)/kppp/Rules/Germany

EXTRA_DIST = $(pkg_DATA)
