pkg_DATA = AddCom_by_Call.rst Addcom.rst \
	CallOkaynet.rst \
	City_Activ_Plus_Option.rst \
	Mobilcom_Freenet.rst \
	Nikoma.rst Nikoma_Internet_by_Call.rst Nikoma_Study_and_Surf.rst \
	Telekom_City_Select_5_30.rst \
	knUUt-by-Call.rst \
	talkline_by_call.rst \
	vossnet_fun.rst vossnet_fun_light.rst vossnet_kompl.rst \
	Planet-Interkom_Internet_by_call.rst \
	NGI_Call_By_Call.rst \
	MSN.rst \
	Freenet_Enterprise.rst

pkgdir = $(kde_datadir)/kppp/Rules/Germany

EXTRA_DIST = $(pkg_DATA)

