



########### install files ###############

install( FILES Local.rst  		Local_MATAV.rst  		LocalTop_MATAV.rst  		PapaTel.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Hungary)




#original Makefile.am contents follow:

#pkg_DATA = 	Local.rst \
#		Local_MATAV.rst \
#		LocalTop_MATAV.rst \
#		PapaTel.rst
#
#pkgdir = $(kde_datadir)/kppp/Rules/Hungary
#
#EXTRA_DIST = $(pkg_DATA)
