



########### install files ###############

install( FILES Lokal_1_Metropolitan.rst  		Lokal_non_metropolitan.rst  		Lokal_2_Metropolitan.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Indonesia)




#original Makefile.am contents follow:

#pkg_DATA =	Lokal_1_Metropolitan.rst \
#		Lokal_non_metropolitan.rst \
#		Lokal_2_Metropolitan.rst
#
#pkgdir = $(kde_datadir)/kppp/Rules/Indonesia
#
#EXTRA_DIST = $(pkg_DATA)
