



########### install files ###############

install( FILES Bezeq_Local.rst  		Bezeq_Interurban.rst  DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Israel)




#original Makefile.am contents follow:

#pkg_DATA =	Bezeq_Local.rst \
#		Bezeq_Interurban.rst
#
#pkgdir = $(kde_datadir)/kppp/Rules/Israel
#
#EXTRA_DIST = $(pkg_DATA)
