pkg_DATA =     	Infostrada_Libero@Sogno.rst \
		Infostrada_Libero@Sogno_Prima_del_24.10.2000.rst \
		Infostrada_Locali.rst \
		Infostrada_Nazionali.rst \
		Infostrada_Regionali.rst \
		Infostrada_SpazioZero.rst \
		Infostrada_SpazioZero_Ridotta.rst \
		TAT_Distrettuale.rst \
		TAT_Formula_Urbana.rst \
		TAT_Interdistrettuale_0-15.rst \
		TAT_Interdistrettuale_15-30.rst \
		TAT_Interdistrettuale_30+.rst \
		TAT_Urbana.rst \
		Tele2_Urbana.rst \
		Teleconomy_24.rst \
		Teleconomy_24_Ridotta.rst \
		Teleconomy_No_Stop.rst \
		Wind_Internet_Light_1088.rst \
		Wind_Internet_Light_1088_24ore.rst \
		Wind_Regionale_1088_Light.rst \
		Wind_Urbana.rst \
		Wind_Urbana_1088_Light.rst

pkgdir = $(kde_datadir)/kppp/Rules/Italy

EXTRA_DIST = $(pkg_DATA)

