pkg_DATA = Atlanet.rst \
	Cheapnet.rst \
	Infostrada_Internet_SpZero.rst \
	Infostrada_Libero1055_Base.rst \
	Infostrada_Libero1055_SpZero.rst \
	Infostrada_Loc_Reg_Naz_SpZero.rst \
	Infostrada_Locali_Base.rst \
	Infostrada_Reg_Naz_Base.rst \
	Tele2_Altri_ISP.rst \
	Tele2_Internet_Tele2.rst \
	Telecom_Interurbane_Fino15Km.rst \
	Telecom_Interurbane_Oltre15Km.rst \
	Telecom_Locali.rst \
	Teleconomy24_Internet.rst \
	Teleconomy24_Nazionali.rst \
	Teleconomy_NoStop_Internet.rst \
	Wind_24ore_Internet_AltriISP.rst \
	Wind_24ore_Internet_InWind.rst \
	Wind_24ore_Interurbane.rst \
	Wind_24ore_Urbane.rst \
	Wind_Family+SuperLight_Internet_InWind.rst \
	Wind_Family+SuperLight_Urbane_Interurbane.rst \
	Wind_Family_Internet_AltriISP.rst \
	Wind_Family_Internet_InWind.rst \
	Wind_Family_Interurbane.rst \
	Wind_Family_Urbane.rst \
	Wind_Flat_Internet_AltriISP.rst \
	Wind_Flat_Internet_InWind.rst \
	Wind_Urbana_1088_Light.rst

pkgdir = $(kde_datadir)/kppp/Rules/Italy

EXTRA_DIST = $(pkg_DATA)

