



########### install files ###############

install( FILES CWJ_InterParish.rst  		CWJ_Local.rst    DESTINATION ${DATA_INSTALL_DIR}/kppp/Rules/Jamaica)




#original Makefile.am contents follow:

#pkg_DATA =	CWJ_InterParish.rst \
#		CWJ_Local.rst  
#
#pkgdir = $(kde_datadir)/kppp/Rules/Jamaica
#
#EXTRA_DIST = $(pkg_DATA)
